Fix tests using APIs that are deprecated in JDK11